2012-09-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoPDFSurface.m:
	* Source/cairo/CairoContext.m:
	* Source/cairo/CairoSurface.m:
	* Source/cairo/CairoPSSurface.m:
	* Headers/cairo/CairoSurface.h: Add a -isDrawingToScreen method
	to CairoSurface. Returns NO for PDF/PS surfaces, yes for others.
	Use it to implement -[CairoContext isDrawingToScreen], so that
	-[NSGraphicsContext isDrawingToScreen] will return the correct
	value.

2012-09-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerWindow.m (-imagecursor:::): Fix Xcursor
	specific code for big endian machines.

2012-08-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontEnumerator.m: Allow for Windows default
	fonts.
	* Source/win32/w32_GLcontext.m,
	* Source/x11/XGGLContext.m: Implement 10.6 methods to get/set the
	CGLContextObj.

2012-06-21  Eric Wasylishen  <ewasylishen@gmail.com>

	* configure.ac: use AC_CHECK_LIB to check for cairo if pkg-config
	is not available
	* configure: regenerate

2012-05-14  Quentin Mathe  <quentin.mathe@gmail.com>

	* Source/gsc/GSContext.m (+initialize): Protected +initialize from being 
	called multiple times because of subclasses. As a result, this 
	eliminates a gtable memory leak (e.g. +initialize sent to both GSContext 
	and CairoContext at backend initialization time), and prevents the 
	gstate stack to be reset while still in use (e.g. the program enumerates 
	classes at runtime and sends messages to them... +initialize might be 
	sent to GSStreamContext in such a case). 

2012-05-12  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/XIMInputServer.m: Remove the locale setting code.
	Use the correct #ifdef check for Xutf8LookupString, and use
	that function if available; otherwise use XLookupString.
	Interpret the return value of XLookupString as Latin-1.

2012-03-22  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/XGServerEvent.m: Make the GSModifiersAreKeys