@@ -1,3 +1,8 @@
+2012-09-28  Fred Kiefer  <FredKiefer@gmx.de>
+
+	* Source/gsc/GSStreamContext.m (-GSShowGlyphsWithAdvances:): Add
+	missing method.
+
 2012-09-26  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* Source/cairo/CairoPDFSurface.m:
